# shared-sycophancy-lying-circuit

./: .gitignore  Makefile  README.md  pyproject.toml
data/dpo/: README.md  antisyc_dpo_eval.jsonl  antisyc_dpo_train.jsonl  sham_dpo_eval.jsonl  sham_dpo_train.jsonl
docs/analyses/: activation-patching.md  attribution-patching.md  bootstrap-cis.md  breadth.md  causal-ablation.md  circuit-overlap.md  direction-analysis.md  dla-instructed-lying.md  dpo-antisyc.md  faithfulness.md  head-zeroing.md  layer-strat-null.md  linear-probe-sae-alignment.md  logit-lens.md  mlp-ablation.md  mlp-mediation.md  norm-matched.md  nq-replication.md  opinion-causal.md  opinion-circuit-transfer.md  path-patching.md  probe-transfer.md  projection-ablation.md  reverse-projection.md  sae-feature-overlap.md  sae-k-sensitivity.md  sae-sentiment-control.md  steering.md  triple-intersection.md
src/shared_circuits/: __init__.py  cli.py  config.py
src/shared_circuits/analyses/: __init__.py  activation_patching.py  attribution_patching.py  bootstrap_cis.py  breadth.py  causal_ablation.py  circuit_overlap.py  direction_analysis.py  dla_instructed_lying.py  dpo_antisyc.py  faithfulness.py  head_zeroing.py  layer_strat_null.py  linear_probe_sae_alignment.py  logit_lens.py  (+15 more)
tests/: conftest.py  test_cli.py  test_config.py
tests/analyses/: conftest.py  test_activation_patching.py  test_attribution_patching.py  test_bootstrap_cis.py  test_breadth.py  test_causal_ablation.py  test_circuit_overlap.py  test_direction_analysis.py  test_dla_instructed_lying.py  test_dpo_antisyc.py  test_faithfulness.py  test_head_zeroing.py  test_layer_strat_null.py  test_linear_probe_sae_alignment.py  test_logit_lens.py  test_mlp_ablation.py  test_mlp_mediation.py  test_norm_matched.py  test_nq_replication.py  test_opinion_causal.py  test_opinion_circuit_transfer.py  test_path_patching.py  test_probe_transfer.py  test_projection_ablation.py  test_reverse_projection.py  test_sae_feature_overlap.py  test_sae_k_sensitivity.py  test_sae_sentiment_control.py  test_steering.py  test_triple_intersection.py
tests/attribution/: test_dla.py  test_patching.py
tests/data/: test_dpo_preferences.py  test_naturalquestions.py  test_opinions.py  test_sae_features.py  test_triviaqa.py
tests/experiment/: test_context.py  test_results.py
tests/extraction/: test_ablated.py  test_behavior.py  test_extractor.py  test_residual.py  test_sae.py
tests/models/: test_loader.py  test_tokens.py
tests/prompts/: conftest.py  test_chat.py  test_instructed.py  test_lying.py  test_opinion.py  test_sycophancy.py
tests/stats/: test_bootstrap.py  test_correlation.py  test_geometry.py  test_probes.py  test_significance.py
(+34 files in other folders)
