[project]
name = "shared-circuits"
version = "0.1.0"
description = "Shared incorrectness-detection circuitry underlies factual sycophancy and lying"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.25.0",
    "numpy>=2.0.0",
    "peft>=0.13.0",
    "pydantic>=2.0.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "torch>=2.8.0",
    "transformer-lens>=2.0.0",
    "trl>=0.12.0",
    "tqdm>=4.66.0",
]

[project.scripts]
shared-circuits = "shared_circuits.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
    "ty>=0.0.1a27",
    "matplotlib>=3.9.0",
]
unit-test = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
]
code-quality = [
    "ruff>=0.14.6",
    "ty>=0.0.1a27",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "shared_circuits"
module-root = "src"

[tool.ruff]
fix = true
line-length = 120
exclude = ["experiments", "old_scripts"]

[tool.ruff.lint]
extend-select = ["D", "RUF", "PT", "TID", "I", "PL"]
ignore = ["D203", "D212", "E741", "PLR0913", "F821"]
per-file-ignores = { "tests/**/*.py" = ["D", "PLR2004"] }

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ty.terminal]
output-format = "concise"

[tool.ty.rules]
unused-ignore-comment = "error"
# string annotations for deferred imports (transformer_lens is GPU-heavy)
unresolved-reference = "ignore"

[tool.pytest.ini_options]
addopts = [
    "--cov=shared_circuits",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
    "--maxfail=3",
    "--durations=5",
]

[tool.coverage.run]
source_pkgs = ["shared_circuits"]

[tool.coverage.report]
exclude_lines = ["if __name__"]
omit = [
    "src/shared_circuits/models/loader.py",
    "src/shared_circuits/models/parallelism.py",
    "src/shared_circuits/cli.py",
    # the analyses below have GPU-only inner machinery; their config/CLI
    # surface is tested but the per-edge / per-layer guts need a real model
    "src/shared_circuits/analyses/breadth.py",
    "src/shared_circuits/analyses/path_patching.py",
    "src/shared_circuits/analyses/head_zeroing.py",
    "src/shared_circuits/analyses/reverse_projection.py",
    "src/shared_circuits/analyses/steering.py",
    "src/shared_circuits/analyses/activation_patching.py",
    "src/shared_circuits/analyses/mlp_ablation.py",
    "src/shared_circuits/analyses/mlp_mediation.py",
]
